2005-10-01  Edward Hervey  <edward@fluendo.com>

	* pitivi/bin.py:
	* pitivi/discoverer.py:
	* pitivi/objectfactory.py:
	* pitivi/playground.py:
	* pitivi/settings.py:
	* pitivi/timeline.py:
	Update to make pitivi work with gst 0.9
	Playground's global thread has gone and SmartBin's are now Pipelines
	
	* pitivi/ui/elementsettingsdialog.glade:
	* pitivi/ui/encodingdialog.glade:
	* pitivi/ui/sourcefactories.py:
	Make interface more HIG compliant
	
	* pitivi/ui/viewer.py:
	Update to _create_sinkthreads() and _check_time() for gst 0.9

	Added debug logging a bit everywhere...

2005-09-22  Edward Hervey  <edward@fluendo.com>

	* pitivi/bin.py:
	Updated to new state handling
	* pitivi/discoverer.py:
	Added debugging
	* pitivi/playground.py:
	Tss... we need a toplevel pipeline
	Added debugging
	* pitivi/ui/viewer.py:
	Updated gconf magic to grab gstreamer 0.9 keys
	Thread -> Bin
	ghostpad modifications

2005-09-22  Edward Hervey  <edward@fluendo.com>

	* bin/pitivi.in:
	Use gst-python 0.9
	* pitivi/bin.py:
	* pitivi/discoverer.py:
	* pitivi/effects.py:
	* pitivi/pitivi.py:
	* pitivi/playground.py:
	* pitivi/project.py:
	* pitivi/settings.py:
	* pitivi/sourcelist.py:
	* pitivi/timeline.py:
	* pitivi/ui/mainwindow.py:
	* pitivi/ui/timeline.py:
	* pitivi/ui/viewer.py:
	Added some debugging output,
	commented out gnonlin-specific parts of PiTiVi, which will have to be
	removed once gnonlin is ported

2005-07-23  Edward Hervey  <edward@fluendo.com>

	On our way to a gstreamer 0.9 pitivi :)

	* configure.ac:
	updated dependencies, removed compile-time dependency on gnonlin

2005-07-08  Edward Hervey  <edward@fluendo.com>

	* pitivi/configure.py.in: (pitivi_version):
	* pitivi/ui/mainwindow.py:
	Added configure.pitivi_version variable created at compilation so the
	version number is coherent.

2005-07-05  Edward Hervey  <edward@fluendo.com>

	* bin/pitivi.in:
	* configure.ac:
	Use PYTHONDIR
	
	* pitivi/bin.py:
	cleanup
	
	* pitivi/settings.py:
	added __str__()
	